import 'package:flutter/material.dart';

class AppIcon extends StatelessWidget {

  const AppIcon({Key? key}) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return const Icon(
      Icons.account_balance,
      size: 214,
    );
  }
}
